# fut_profit_cli

./: .gitignore  README.md  pyproject.toml
src/fc26/: cli.py
