[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fc26"
version = "0.1.0"
description = "CLI tool for FUTBIN market scanning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fc26 = "fc26.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
